# railwaydeploy

./: README.md  db.sqlite3  requirements.txt
app/: pyproject.toml
bookstore/: settings.py  urls.py
controle/: manage.py
controle/controle/: asgi.py  settings.py  urls.py  wsgi.py
order/: factories.py
order/migrations/: 0001_initial.py
order/serializers/: order_serializer.py
order/tests/test_viewsets/: test_order_viewset.py
product/migrations/: 0001_initial.py  0002_rename_activate_category_active.py  0003_rename_price_category_slug.py  0004_rename_slug_category_price.py
product/models/: category.py
product/serializers/: __init__.py
product/tests/test_serializers/: test_category_serializer.py
product/tests/test_viewsets/: test_category_viewset.py  test_product_viewset.py
