[tool.poetry]
name = "bookstore"
version = "0.1.0"
description = "Linux Version Program Ebac"
authors = ["Patrick PAssarella"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
black = "^23.1.0"
pytest = "^7.2.2"
factory-boy = "^3.2.1"
django = "^4.1.7"
django-rest-framework = "^0.1.0"
django-extensions = "^3.2.1"
django-debug-toolbar = "^3.8.1"
django-debug-panel = "^0.8.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
